--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -155,6 +155,14 @@ Create a directory on your computer where you will store your copy of the GitHub
 mkdir ~/PathToYourLocalRepo
 ```
 
+The tilde (~) refers to your home directory.  In other words, `~/PathToYourLocalRepo`
+will create a directory called `PathToYourLocalRepo` in your home directory.  Navigate 
+to the new directory by typing
+
+```{r label = CDdir, eval = FALSE}
+cd ~/PathToYourLocalRepo
+```
+
 It is possible to set up a local repository using GUI (drop, drag, etc.) commands or to
 use the command line.  I keep my repositories in a folder called *git_repositories* that
 is a subfolder of my *USERNAME* directory.  Once you have a local folder with files you
