--- a/thesis/Bibliography/Rpkgs031914.bib
+++ b/thesis/Bibliography/Rpkgs031914.bib
@@ -105,7 +105,7 @@ dBase, ...},
   url = {http://CRAN.R-project.org/package=httr},
 }
 @Manual{R-KernSmooth,
-  title = {KernSmooth: Functions for kernel smoothing for Wand & Jones (1995)},
+  title = {KernSmooth: Functions for kernel smoothing for Wand \& Jones (1995)},
   author = {Matt Wand},
   year = {2013},
   note = {R package version 2.23-10},
