--- a/thesis/Bibliography/Bibliography.bib
+++ b/thesis/Bibliography/Bibliography.bib
@@ -1,3 +1,47 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Alan Arnholt at 2014-03-19 16:38:03 -0400 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{gandrud2013reproducible,
+	Author = {Gandrud, Christopher},
+	Date-Added = {2014-03-19 20:37:56 +0000},
+	Date-Modified = {2014-03-19 20:37:56 +0000},
+	Publisher = {CRC Press},
+	Title = {Reproducible Research with R and RStudio},
+	Year = {2013}}
+
+@book{gratzer2007more,
+	Author = {Gr{\"a}tzer, George and Sch{\"o}pf, Rainer},
+	Date-Added = {2014-03-19 20:34:58 +0000},
+	Date-Modified = {2014-03-19 20:34:58 +0000},
+	Publisher = {Springer},
+	Title = {More math into latex},
+	Volume = {4},
+	Year = {2007}}
+
+@book{spector2008data,
+	Author = {Spector, Phil},
+	Date-Added = {2014-03-19 20:30:20 +0000},
+	Date-Modified = {2014-03-19 20:30:20 +0000},
+	Publisher = {Springer},
+	Title = {Data manipulation with R},
+	Year = {2008}}
+
+@book{xie2013dynamic,
+	Author = {Xie, Yihui},
+	Date-Added = {2014-03-19 20:27:23 +0000},
+	Date-Modified = {2014-03-19 20:27:23 +0000},
+	Publisher = {CRC Press},
+	Title = {Dynamic Documents with R and knitr},
+	Year = {2013}}
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
@@ -7,9 +51,10 @@
 	Numpages = {3},
 	Pages = {4477--4479},
 	Title = {Littrow Configuration Tunable External Cavity Diode Laser with Fixed Direction Output Beam},
-	Volume = {72},
 	Url = {http://link.aip.org/link/?RSI/72/4477/1},
-	Year = {2001}}
+	Volume = {72},
+	Year = {2001},
+	Bdsk-Url-1 = {http://link.aip.org/link/?RSI/72/4477/1}}
 
 @article{Reference3,
 	Abstract = {Operating a laser diode in an extended cavity which provides frequency-selective feedback is a very effective method of reducing the laser's linewidth and improving its tunability. We have developed an extremely simple laser of this type, built from inexpensive commercial components with only a few minor modifications. A 780~nm laser built to this design has an output power of 80~mW, a linewidth of 350~kHz, and it has been continuously locked to a Doppler-free rubidium transition for several days.},
@@ -20,9 +65,10 @@
 	Numpages = {4},
 	Pages = {1236--1239},
 	Title = {A Simple Extended-Cavity Diode Laser},
-	Volume = {69},
 	Url = {http://link.aip.org/link/?RSI/69/1236/1},
-	Year = {1998}}
+	Volume = {69},
+	Year = {1998},
+	Bdsk-Url-1 = {http://link.aip.org/link/?RSI/69/1236/1}}
 
 @article{Reference2,
 	Abstract = {We present a review of the use of diode lasers in atomic physics with an extensive list of references. We discuss the relevant characteristics of diode lasers and explain how to purchase and use them. We also review the various techniques that have been used to control and narrow the spectral outputs of diode lasers. Finally we present a number of examples illustrating the use of diode lasers in atomic physics experiments. Review of Scientific Instruments is copyrighted by The American Institute of Physics.},
@@ -34,310 +80,7 @@
 	Numpages = {20},
 	Pages = {1--20},
 	Title = {Using Diode Lasers for Atomic Physics},
-	Volume = {62},
 	Url = {http://link.aip.org/link/?RSI/62/1/1},
-	Year = {1991}}
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2013},
-  url = {http://www.R-project.org/},
-}
-@Manual{R-bibtex,
-  title = {bibtex: bibtex parser},
-  author = {Romain Francois},
-  year = {2013},
-  note = {R package version 0.3-6},
-  url = {http://CRAN.R-project.org/package=bibtex},
-}
-@Manual{R-boot,
-  title = {boot: Bootstrap Functions (originally by Angelo Canty for S)},
-  author = {Angelo Canty and Brian Ripley},
-  year = {2013},
-  note = {R package version 1.3-9},
-}
-@Manual{R-coin,
-  title = {coin: Conditional Inference Procedures in a Permutation Test Framework},
-  author = {Torsten Hothorn and Kurt Hornik and Mark A. {van de Wiel} and Achim Zeileis},
-  year = {2013},
-  note = {R package version 1.0-23},
-  url = {http://CRAN.R-project.org/package=coin},
-}
-@Manual{R-devtools,
-  title = {devtools: Tools to make developing R code easier},
-  author = {Hadley Wickham and Winston Chang},
-  year = {2013},
-  note = {R package version 1.4.1},
-  url = {http://CRAN.R-project.org/package=devtools},
-}
-@Manual{R-e1071,
-  title = {e1071: Misc Functions of the Department of Statistics (e1071), TU Wien},
-  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
-  year = {2014},
-  note = {R package version 1.6-2},
-  url = {http://CRAN.R-project.org/package=e1071},
-}
-@Manual{R-faraway,
-  title = {faraway: Functions and datasets for books by Julian Faraway.},
-  author = {Julian Faraway},
-  year = {2011},
-  note = {R package version 1.0.5},
-  url = {http://CRAN.R-project.org/package=faraway},
-}
-@Manual{R-foreign,
-  title = {foreign: Read Data Stored by Minitab, S, SAS, SPSS, Stata, Systat, Weka,
-dBase, ...},
-  author = {{R Core Team}},
-  year = {2014},
-  note = {R package version 0.8-59},
-  url = {http://CRAN.R-project.org/package=foreign},
-}
-@Manual{R-formatR,
-  title = {formatR: Format R Code Automatically},
-  author = {Yihui Xie},
-  year = {2013},
-  note = {R package version 0.10},
-  url = {http://CRAN.R-project.org/package=formatR},
-}
-@Manual{R-ggplot2,
-  title = {ggplot2: An implementation of the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang},
-  year = {2013},
-  note = {R package version 0.9.3.1},
-  url = {http://CRAN.R-project.org/package=ggplot2},
-}
-@Manual{R-gridExtra,
-  title = {gridExtra: functions in Grid graphics},
-  author = {Baptiste Auguie},
-  year = {2012},
-  note = {R package version 0.9.1},
-  url = {http://CRAN.R-project.org/package=gridExtra},
-}
-@Manual{R-gtable,
-  title = {gtable: Arrange grobs in tables.},
-  author = {Hadley Wickham},
-  year = {2012},
-  note = {R package version 0.1.2},
-  url = {http://CRAN.R-project.org/package=gtable},
-}
-@Manual{R-highr,
-  title = {highr: Syntax highlighting for R},
-  author = {Yihui Xie and Yixuan Qiu},
-  year = {2013},
-  note = {R package version 0.3},
-  url = {http://CRAN.R-project.org/package=highr},
-}
-@Manual{R-Hmisc,
-  title = {Hmisc: Harrell Miscellaneous},
-  author = {Harrell, Jr., Frank E},
-  year = {2014},
-  note = {R package version 3.14-3},
-  url = {http://CRAN.R-project.org/package=Hmisc},
-}
-@Manual{R-httr,
-  title = {httr: Tools for working with URLs and HTTP},
-  author = {Hadley Wickham},
-  year = {2012},
-  note = {R package version 0.2},
-  url = {http://CRAN.R-project.org/package=httr},
-}
-@Manual{R-KernSmooth,
-  title = {KernSmooth: Functions for kernel smoothing for Wand & Jones (1995)},
-  author = {Matt Wand},
-  year = {2013},
-  note = {R package version 2.23-10},
-  url = {http://CRAN.R-project.org/package=KernSmooth},
-}
-@Manual{R-knitcitations,
-  title = {knitcitations: Citations for knitr markdown files},
-  author = {Carl Boettiger},
-  year = {2014},
-  note = {R package version 0.5-0},
-  url = {http://CRAN.R-project.org/package=knitcitations},
-}
-@Manual{R-knitr,
-  title = {knitr: A general-purpose package for dynamic report generation in R},
-  author = {Yihui Xie},
-  year = {2013},
-  note = {R package version 1.5.21},
-  url = {http://yihui.name/knitr/},
-}
-@Manual{R-lattice,
-  title = {lattice: Lattice Graphics},
-  author = {Deepayan Sarkar},
-  year = {2014},
-  note = {R package version 0.20-27},
-  url = {http://CRAN.R-project.org/package=lattice},
-}
-@Manual{R-latticeExtra,
-  title = {latticeExtra: Extra Graphical Utilities Based on Lattice},
-  author = {Deepayan Sarkar and Felix Andrews},
-  year = {2013},
-  note = {R package version 0.6-26},
-  url = {http://CRAN.R-project.org/package=latticeExtra},
-}
-@Manual{R-leaps,
-  title = {leaps: regression subset selection},
-  author = {Thomas Lumley},
-  year = {2009},
-  note = {R package version 2.9},
-  url = {http://CRAN.R-project.org/package=leaps},
-}
-@Manual{R-MASS,
-  title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
-  author = {Brian Ripley},
-  year = {2013},
-  note = {R package version 7.3-29},
-  url = {http://CRAN.R-project.org/package=MASS},
-}
-@Manual{R-multcomp,
-  title = {multcomp: Simultaneous Inference in General Parametric Models},
-  author = {Torsten Hothorn and Frank Bretz and Peter Westfall},
-  year = {2014},
-  note = {R package version 1.3-2},
-  url = {http://CRAN.R-project.org/package=multcomp},
-}
-@Manual{R-multcompView,
-  title = {multcompView: Visualizations of Paired Comparisons},
-  author = {Spencer Graves and Hans-Peter Piepho and Luciano Selzer with help from Sundar Dorai-Raj},
-  year = {2012},
-  note = {R package version 0.1-5},
-  url = {http://CRAN.R-project.org/package=multcompView},
-}
-@Manual{R-mvtnorm,
-  title = {mvtnorm: Multivariate Normal and t Distributions},
-  author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Friedrich Leisch and Fabian Scheipl and Bjoern Bornkamp and Torsten Hothorn},
-  year = {2014},
-  note = {R package version 0.9-9997},
-  url = {http://CRAN.R-project.org/package=mvtnorm},
-}
-@Manual{R-nlme,
-  title = {nlme: Linear and Nonlinear Mixed Effects Models},
-  author = {José Pinheiro and Douglas Bates and {R-core}},
-  year = {2013},
-  note = {R package version 3.1-113},
-  url = {http://CRAN.R-project.org/package=nlme},
-}
-@Manual{R-nortest,
-  title = {nortest: Tests for Normality},
-  author = {Juergen Gross and bug fixes by Uwe Ligges},
-  year = {2012},
-  note = {R package version 1.0-2},
-  url = {http://CRAN.R-project.org/package=nortest},
-}
-@Manual{R-PASWR,
-  title = {PASWR: PROBABILITY and STATISTICS WITH R},
-  author = {Alan T. Arnholt},
-  year = {2012},
-  note = {R package version 1.1},
-  url = {http://CRAN.R-project.org/package=PASWR},
-}
-@Manual{R-plyr,
-  title = {plyr: Tools for splitting, applying and combining data},
-  author = {Hadley Wickham},
-  year = {2014},
-  note = {R package version 1.8.1},
-  url = {http://CRAN.R-project.org/package=plyr},
-}
-@Manual{R-RCurl,
-  title = {RCurl: General network (HTTP/FTP/...) client interface for R},
-  author = {Duncan {Temple Lang}},
-  year = {2013},
-  note = {R package version 1.95-4.1},
-  url = {http://CRAN.R-project.org/package=RCurl},
-}
-@Manual{R-repmis,
-  title = {repmis: A collection of miscellaneous tools for reproducible research
-with R.},
-  author = {Christopher Gandrud},
-  year = {2014},
-  note = {R package version 0.2.7.1},
-  url = {http://CRAN.R-project.org/package=repmis},
-}
-@Manual{R-reports,
-  title = {reports: An R package to assist in the workflow of writing academic
-articles and other reports},
-  author = {Tyler Rinker},
-  year = {2013},
-  note = {R package version 0.1.2},
-  url = {http://CRAN.R-project.org/package=reports},
-}
-@Manual{R-reshape2,
-  title = {reshape2: Flexibly reshape data: a reboot of the reshape package.},
-  author = {Hadley Wickham},
-  year = {2012},
-  note = {R package version 1.2.2},
-  url = {http://CRAN.R-project.org/package=reshape2},
-}
-@Manual{R-roxygen2,
-  title = {roxygen2: In-source documentation for R},
-  author = {Hadley Wickham and Peter Danenberg and Manuel Eugster},
-  year = {2014},
-  note = {R package version 3.1.0},
-  url = {http://CRAN.R-project.org/package=roxygen2},
-}
-@Manual{R-rstudio,
-  title = {rstudio: Tools and Utilities for RStudio},
-  author = {{RStudio}},
-  year = {2012},
-  note = {R package version 0.98.501},
-}
-@Manual{R-shiny,
-  title = {shiny: Web Application Framework for R},
-  author = {{RStudio,}{ Inc.}},
-  year = {2013},
-  note = {R package version 0.8.0.99},
-  url = {http://www.rstudio.com/shiny/},
-}
-@Manual{R-shinyAce,
-  title = {shinyAce: Ace editor bindings for Shiny},
-  author = {Trestle Technology and {LLC.}},
-  year = {2013},
-  note = {R package version 0.1.0},
-  url = {http://CRAN.R-project.org/package=shinyAce},
-}
-@Manual{R-tikzDevice,
-  title = {tikzDevice: R Graphics Output in LaTeX Format},
-  author = {Charlie Sharpsteen and Cameron Bracken},
-  year = {2013},
-  note = {R package version 0.7.0},
-  url = {http://CRAN.R-project.org/package=tikzDevice},
-}
-@Manual{R-vcd,
-  title = {vcd: Visualizing Categorical Data},
-  author = {David Meyer and Achim Zeileis and Kurt Hornik},
-  year = {2013},
-  note = {R package version 1.3-1},
-  url = {http://CRAN.R-project.org/package=vcd},
-}
-@Manual{R-vcdExtra,
-  title = {vcdExtra: vcd extensions and additions},
-  author = {Michael Friendly},
-  year = {2013},
-  note = {R package version 0.5-11},
-  url = {http://CRAN.R-project.org/package=vcdExtra},
-}
-@Manual{R-xlsx,
-  title = {xlsx: Read, write, format Excel 2007 and Excel 97/2000/XP/2003 files},
-  author = {Adrian A. Dragulescu},
-  year = {2013},
-  note = {R package version 0.5.5},
-  url = {http://CRAN.R-project.org/package=xlsx},
-}
-@Manual{R-xlsxjars,
-  title = {xlsxjars: Package required POI jars for the xlsx package},
-  author = {Adrian A. Dragulescu},
-  year = {2014},
-  note = {R package version 0.6.0},
-  url = {http://CRAN.R-project.org/package=xlsxjars},
-}
-@Manual{R-xtable,
-  title = {xtable: Export tables to LaTeX or HTML},
-  author = {David B. Dahl},
-  year = {2013},
-  note = {R package version 1.7-1},
-  url = {http://CRAN.R-project.org/package=xtable},
-}
-
+	Volume = {62},
+	Year = {1991},
+	Bdsk-Url-1 = {http://link.aip.org/link/?RSI/62/1/1}}
