--- a/thesis/main.Rnw
+++ b/thesis/main.Rnw
@@ -29,7 +29,7 @@
 
 \usepackage[letterpaper,includehead,includefoot]{geometry} % change letterpaper to a4paper for A4 paper size
 \geometry{top=2.0in, bottom=0.0in, left=2.25in, right=0.0in} % read geometry documentation for setting margins
-
+% \usepackage[round]{natbib}  %ATA 3/25/14
 \usepackage{color, xcolor}              
 \usepackage{tikz}                     % used for tikz graphs
 \usetikzlibrary{intersections}
@@ -369,7 +369,7 @@ opts_chunk$set(comment = NA, fig.show='hold', fig.height=7, fig.width=7,
 
 \lhead{\emph{Bibliography}} % Change the page header to say "Bibliography"
 
-\bibliographystyle{unsrtnat} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+\bibliographystyle{unsrtnat} % Use the "unsrtnat" BibTeX style for formatting the Bibliography ....plainnat
 
 \bibliography{./Bibliography/Bibliography,./Bibliography/Rpkgs031914} % The references (bibliography) information are stored in the file named "Bibliography.bib"
 
